--- a/package.json
+++ b/package.json
@@ -9,9 +9,29 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+  ],
   "main": "./dist/extension.js",
   "contributes": {
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "xlsxgrep",
+          "title": "XLSXgrep",
+          "icon": "resources/icon.svg"
+        }
+      ]
+    },
+    "views": {
+      "xlsxgrep": [
+        {
+          "type": "webview",
+          "id": "xlsxgrep.searchView",
+          "name": "XLSX Search for VSCode",
+          "icon": "resources/icon.svg"
+        }
+      ]
+    },
     "commands": [
       {
         "command": "xlsxgrep-vscode.helloWorld",
