--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-  ],
+  "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
     "viewsContainers": {
       "activitybar": [
         {
           "id": "xlsxgrep",
-          "title": "XLSXgrep",
+          "title": "XLSXgrep FOR VSCODE",
           "icon": "resources/icon.svg"
         }
       ]
@@ -27,7 +26,7 @@
         {
           "type": "webview",
           "id": "xlsxgrep.searchView",
-          "name": "XLSX Search for VSCode"
+          "name": "Search"
         },
         {
           "type": "tree",
@@ -58,15 +57,18 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.107.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
-    "typescript-eslint": "^8.48.1",
-    "eslint": "^9.39.1",
+    "@types/vscode": "^1.107.0",
+    "@vscode/test-cli": "^0.0.12",
+    "@vscode/test-electron": "^2.5.2",
     "esbuild": "^0.27.1",
+    "eslint": "^9.39.1",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.9.3",
-    "@vscode/test-cli": "^0.0.12",
-    "@vscode/test-electron": "^2.5.2"
+    "typescript-eslint": "^8.48.1"
+  },
+  "dependencies": {
+    "xlsx": "^0.18.5"
   }
 }
